--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,3 +4,15 @@
   width: 500px;
   margin: 25px auto;
 }
+
+.img-box  {
+  width: 50px;
+  height: 50px;
+  img {
+    width: 100%
+  }
+}
+
+.media{
+  display: block;
+}
