added back button to individual contact. basic styling.

--- a/app/templates/contact-list.tpl.html
+++ b/app/templates/contact-list.tpl.html
@@ -20,8 +20,10 @@
         </tr>
     </tbody>
 </table>
-<a href="#!/contact/new">
-    <div class="img-box">
-        <img src="./images/add-contact.png" alt="">
-    </div>
-</a>
+<div class="right">
+    <a href="#!/contact/new">
+        <div class="img-box">
+            <img src="./images/add-contact.png" alt="">
+        </div>
+    </a>
+</div>
