--- a/app/templates/contact.tpl.html
+++ b/app/templates/contact.tpl.html
@@ -11,7 +11,7 @@
                         <article class="media">
                             <figure class="media-left">
                                 <p class="image is-64x64">
-                                    <img ng-src='' />
+                                    <i class="fa fa-user-circle" aria-hidden="true"></i>
                                 </p>
                             </figure>
                             <div class="media-content">
@@ -25,7 +25,7 @@
                         <article class="media">
                             <figure class="media-left">
                                 <p class="image is-64x64">
-                                    <img ng-src='' />
+                                    <i class="fa fa-envelope" aria-hidden="true"></i>
                                 </p>
                             </figure>
                             <div class="media-content">
@@ -39,7 +39,7 @@
                         <article class="media">
                             <figure class="media-left">
                                 <p class="image is-64x64">
-                                    <img ng-src='' />
+                                    <i class="fa fa-mobile" aria-hidden="true"></i>
                                 </p>
                             </figure>
                             <div class="media-content">
@@ -53,7 +53,7 @@
                 <article class="media">
                     <figure class="media-left">
                         <p class="image is-64x64">
-                            <img ng-src='' />
+                            <i class="fa fa-globe" aria-hidden="true"></i>
                         </p>
                     </figure>
                     <div class="media-content">
@@ -64,5 +64,12 @@
                 </article>
             </div>
         </div>
+    </div>
+    <div class="back right">
+        <a href="#!/home">
+            <div class="img-box">
+                <img src="./images/back.png" alt="">
+            </div>
+        </a>
     </div>
 </div>
