--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,7 @@
 @import 'bulma';
 
 .container  {
-  width: 500px;
+  width: 300px;
   margin: 25px auto;
 }
 
@@ -11,6 +11,10 @@
   img {
     width: 100%
   }
+}
+
+.right  {
+  float: right;
 }
 
 .media{
